# zaim-csv-converter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  compose.override.yml  compose.yml  config.yml.dist  convert.py  docker-compose.override.yml  docker-compose.yml  extension.md  project-words.txt  pyproject.toml  readme.md  setup.cfg  tasks.py
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: analyze.yml  codeql.yml  qlty.yml  test.yml
docs/: CONTRIBUTING.md
errorcollector/: error_collector.py
godslayer/: csv_reader.py  csv_with_header_reader.py  exceptions.py  row_pattern_matcher.py  view_card_csv_reader.py
pydantictypes/: __init__.py  abstract_string_to_int.py  abstract_string_to_optional_int.py  kanji_yen_string_to_int.py  string_to_optional_int.py  string_with_comma_to_int.py  string_with_comma_to_optional_int.py  symbol_yen_string_to_int.py  validators.py
tests/: common.py  conftest.py  database_test.py  instance_fixture.py  resource.py  test_account.py  test_account_csv_converter.py  test_account_csv_converter_iterator.py  test_account_dependecy.py  test_config.py  test_convert_table_importer.py  test_error_handler.py  test_file_csv_convert.py  test_input_csv.py  test_input_csv_converter.py  test_input_csv_converter_iterator.py  test_model.py  test_row_processor.py  test_session_manager.py  test_utility.py  test_zaim_csv_converter.py  test_zaim_row.py
tests/accounts/: __init__.py  test_context.py  test_enum.py
tests/csvconverter/: __init__.py  test_csv_record_processor.py  test_csv_to_csv_converter.py  test_input_csv.py  test_input_csv_converter.py  test_input_csv_converter_iterator.py  test_input_data.py  test_row_processor.py  test_zaim_exporter.py
tests/customdatatypes/: __init__.py  test_kanji_yen_string_to_int.py  test_string_to_datetime.py  test_string_to_optional_int.py  test_string_with_comma_to_int.py  test_string_with_comma_to_optional_int.py  test_symbol_yen_string_to_int.py
tests/errorhandling/: __init__.py  test_error_handler.py
tests/errorreporters/: __init__.py  error_totalizer.py  test_input_csv_error_reporter.py
tests/gold_point_card_plus/: test_gold_point_card_row.py
tests/inputcsvformats/: __init__.py  test_amazon.py  test_amazon_201911.py  test_gold_point_card_plus.py  test_gold_point_card_plus_201912.py  test_mufg.py  test_sf_card_viewer.py  test_view_card.py  test_waon.py
tests/inputtooutput/: __init__.py  test_convert_workflow.py
tests/pydantictypes/: __init__.py  test_kanji_yen_string_to_int.py  test_string_to_datetime.py  test_string_to_optional_int.py  test_string_with_comma_to_int.py  test_string_with_comma_to_optional_int.py  test_symbol_yen_string_to_int.py
tests/rowconverters/: test___init__.py  test_amazon.py  test_amazon_201911.py  test_gold_point_card_plus.py  test_gold_point_card_plus_201912.py  test_mufg.py  test_sf_card_viewer.py  test_view_card.py  test_waon.py  view_card.py
tests/test_account_csv_converter/: test_stop_iteration_waon.csv  test_success_waon.csv
tests/testlibraries/: __init__.py  assert_list.py  csv_file_path_builder.py  database.py  database_engine_manager.py  database_for_test.py  error_row_data_for_test.py  file.py  instance_resource.py  integration_test_expected_factory.py  output_csv_file_checker.py  row_data.py  specification.py  zaim_row_data.py
tests/testresources/: config.yml.dist
tests/waon/: __init__.py  test_waon_csv_converter.py  test_waon_row.py  test_waon_row_factory.py
tests/zaim/: __init__.py  test_zaim_csv_converter.py  test_zaim_exporter.py  test_zaim_row.py
zaimcsvconverter/: AccountCsvConverter.py  AccountRow.py  __init__.py  account.py  account_csv_converter.py  account_csv_converter_iterator.py  account_dependency.py  account_row.py  config.py  context_manager.py  convert_table_importer.py  csv_exporter.py  database_wrapper.py  directory_csv.py  enum.py  error_collector.py  error_handler.py  error_totalizer.py  exceptions.py  file_csv_convert.py  first_form_normalizer.py  input_csv.py  input_csv_converter.py  input_csv_converter_iterator.py  input_row.py  invalid_input_csv_handler.py  models.py  recipe.py  row_processor.py  session_factory.py  session_manager.py  utility.py  waon_csv_converter.py  zaim_csv_converter.py  zaim_csv_format.py  zaim_row.py
zaimcsvconverter/account/: amazon.py  gold_point_card_plus.py  mufg.py  sf_card_viewer.py  waon.py
zaimcsvconverter/accounts/: __init__.py  context.py  enum.py
zaimcsvconverter/csvconverter/: __init__.py  csv_record_processor.py  csv_to_csv_converter.py  input_csv.py  input_csv_converter.py  input_csv_converter_iterator.py  input_data.py  record_to_zaim_converter.py  row_processor.py  zaim_exporter.py
zaimcsvconverter/customdatatypes/: abstract_string_to_int.py  abstract_string_to_optional_int.py  kanji_yen_string_to_int.py  string_to_datetime.py  string_to_optional_int.py  string_with_comma_to_int.py  string_with_comma_to_optional_int.py  symbol_yen_string_to_int.py  validators.py  yen_string_to_int.py
zaimcsvconverter/data/: __init__.py  amazon.py  amazon_201911.py  gold_point_card_plus.py  gold_point_card_plus_201912.py  mobile_suica.py  mufg.py  pay_pal.py  pay_pay_card.py  sbi_sumishin_net_bank.py  sf_card_viewer.py  view_card.py  waon.py
zaimcsvconverter/datasources/: __init__.py  csv.py  csv_with_header.py  data_source.py  view_card_csv.py
zaimcsvconverter/errorhandling/: __init__.py  error_handler.py
zaimcsvconverter/errorreporters/: __init__.py  csv_error_reporter.py  csv_exporter.py  error_totalizer.py  input_csv_error_reporter.py
zaimcsvconverter/exceptions/: __init__.py  invalid_input_csv_error.py
zaimcsvconverter/goldpointcardplus/: gold_point_card_plus_config.py  gold_point_card_plus_csv_converter.py  gold_point_card_plus_row.py
zaimcsvconverter/inputcsvformats/: __init__.py  amazon.py  amazon_201911.py  custom_data_types.py  gold_point_card_plus.py  gold_point_card_plus_201912.py  mufg.py  pay_pal.py  sbi_sumishin_net_bank.py  sf_card_viewer.py  view_card.py  (+1 more)
(+290 files in other folders)
